[gd_scene load_steps=7 format=3 uid="uid://bbqret6bimjuv"]

[ext_resource type="Script" uid="uid://grdpg4llu8f4" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bwqoacn61hhf0" path="res://assets/robot player.png" id="2_dqkch"]
[ext_resource type="AudioStream" uid="uid://c5yuab7s5qjya" path="res://assets/jump.wav" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://c8ffi1umtp2gt" path="res://assets/death.wav" id="4_dqkch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(142.1875, 188.43752)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlg0r"]
size = Vector2(220.91405, 228.51563)

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_g2els")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_dqkch")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-13.124997, 14.625)
scale = Vector2(0.7999998, 0.7999998)
shape = SubResource("RectangleShape2D_dqkch")

[node name="Camera" type="Camera2D" parent="."]
scale = Vector2(0.8, 0.8)
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qhqgy")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dqkch")

[node name="EnemyDetector2000" type="Area2D" parent="."]
scale = Vector2(0.8, 0.8)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector2000"]
position = Vector2(-13.365631, -9.375001)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_qlg0r")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="EnemyDetector2000" to="." method="_on_enemy_detector_2000_body_entered"]
